Fix accordion styling on mobile screens

--- a/src/styles/accordion.less
+++ b/src/styles/accordion.less
@@ -11,6 +11,8 @@
 		border: none;
 		border-bottom: solid 1px @white;
 
+		text-align: left;
+
 		h1,
 		h2,
 		h3 {
